# HMC-GVI

./: .gitignore  LICENSE  README.md  pyproject.toml  thesis.txt
GLMM/: HMC_glmm.R  VI_glmm_Poly.r  glmm_mala.R  mu_gvi.csv
Gaussian/: .Rhistory  AM_100gau.R  GVB-Jiao.R  Hamiltonian_100gaussion.R  MALA-100gaussian.R  RMH_100gaussian.R  RMH__various_dimension.R
data/: README.md  german_credit.csv
german/: MALA_Burnin_german.R  RMH+adaptive_german.R  german_MALA_burnin.R  german_hmc_vi.R  hmc_brunin_german.R  rmh_burnin_german.R
pima/: MALA_Burnin_PIMA.R  RMH+adaptive_pima.R  hmc_brunin_pima.R  hmc_vi_pima.R  rmh_burnin_pima.R
python_impl/: HMC_GVI.sublime-project  README.md  __init__.py  data.py  mcmc.py  metrics.py  targets.py  tuning.py  utils.py  vi.py
python_impl/experiments/: __init__.py  exp_4_1_gaussian_speed_accuracy.py  exp_4_2_gaussian_hmc_gvi.py  exp_4_2_glmm.py  exp_4_2_logistic_regression.py
results/: README.md  all_repeats.csv  all_repeats_summary.csv  gaussian100_matched_hmc_20260627.csv  gaussian100_matched_hmc_20260627_summary.csv  glmm_hmc_comparison_20260627.csv  glmm_hmc_comparison_20260627_summary.csv
scripts/: run_all_repeats.py  run_gaussian100_matched.py  run_gaussian_100d.py  run_gaussian_speed_accuracy.py  run_german.py  run_glmm.py  run_glmm_full.py  run_glmm_hmc_comparison.py  run_logistic.py  run_pima.py  summarize_results.py
src/: data.py  mcmc.py  result_io.py  targets.py  tuning.py  vi.py
